<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="underline_licence"><u>условия пользовательского соглашения</u></string>
    <string name="type_phone_number" translatable="false">Введите номер телефона</string>
    <string name="number_mistake">Веденный вами номер телефона не найден. Проверьте номер или зарегестрируйтесь. </string>
    <string name="message">Message</string>
    <string name="toast_system_text">Системный</string>
    <string name="log_in">Войти</string>
    <string name="sign_in">Регистрация</string>
    <string name="empty_text">Empty text</string>
    <string name="title_in_cells">Заголовок</string>
    <string name="cells_info">Информация</string>
    <string name="cells_subtitle">Подзаголовок</string>
    <string name="svevron" translatable="false">svevron</string>
    <string name="icon">icon</string>
    <string name="edit_del_icon">edit/del icon</string>
    <string name="icon_edit">edit icon</string>
    <string name="_12_2022">12 декабря 2022</string>
    <string name="comments">Поле ввода комментарий</string>
    <string name="all">Все</string>
    <string name="spinner">spinner</string>
    <string name="questions">Могу ли я оплатить товар через О!Деньги</string>
    <string name="answer">В данный момент оплата через O!Деньги находится в стадии разработки и будет доступна в ближайших обновлениях приложения.</string>
    <string name="shevron">shevron</string>
    <string name="icon_of_o_dengi">icon of o dengi</string>
    <string name="o_dengi">Продавец принимает О!Деньги, свяжитесь с продавцом для уточнения деталей</string>
    <string name="number_verified">Подтвержденный номер</string>
    <string name="naming">Название</string>
    <string name="category">Категория</string>
    <string name="sub_category">Подкатегория</string>
    <string name="description">Описание</string>
    <string name="my_profile">Мой профиль</string>
    <string name="faq">Вопрос-ответ</string>
    <string name="location">Местоположение на карте</string>
    <string name="hint_for_number">XXXXXXXXXXXX</string>
    <string name="image_description">Cancel</string>
    <string name="enter_number">Введите номер телефона</string>
    <string name="number_exists">номер уже существует в базе О!Маркет. Введите другие данные</string>
    <string name="error_otp">Неверный код</string>
    <string name="resent">Отправить повторно</string>
    <string name="visibility_image">toggle eye</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="forgot_password">забыли пароль ?</string>
    <string name="incorrect_password">Неверный пароль</string>
    <string name="password_not_match">Пароли не совпадают</string>
    <string name="create_new_password">Придумайте пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="frame_error">Frame Error</string>
    <string name="helper_text_create_password">Создайте пароль минимум из 8 символов, включая цифры, заглавные и строчные буквы</string>
    <string name="active">Активные</string>
    <string name="non_active">Неактивные</string>

    <string name="helper_text_wrong_password_length">
        <![CDATA[
        Создайте пароль,
        <font color="red">минимум из 8 символов, </font>
        включая цифры, заглавные и строчные буквы
        ]]>
    </string>

    <string name="helper_text_no_upper_case_letters">
        <![CDATA[
        Создайте пароль, минимум из 8 символов, включая цифры,
        <font color="red">заглавные </font>
         и строчные
        <font color="red"> буквы</font>
        ]]>
    </string>

     <string name="helper_text_no_lower_case_letters">
        <![CDATA[
        Создайте пароль, минимум из 8 символов, включая цифры, заглавные и
        <font color="red"> строчные буквы</font>
        ]]>
    </string>

    <string name="helper_text_space">
        <![CDATA[
        <font color="red">Пароль не может содержать пустые строки!!!</font>
        ]]>
    </string>

    <string name="helper_text_no_digits">
        <![CDATA[
        Создайте пароль, минимум из 8 символов,
        <font color="red">включая цифры</font>
        , заглавные и строчные буквы
        ]]>
    </string>

    <string name="toggle">Union vector</string>
    <string name="_02_00">02:00</string>
    <string name="registration">Регистрация</string>
    <string name="time_out">java.net.SocketTimeoutException: connect timed out</string>
    <string name="incorrect_number">Номер не существует</string>

    <string name="accept">Нажимая \"Войти\" вы принимаете</string>
    <string name="terms_agreement"><u>условия пользовательского соглашения</u></string>
    <string name="number_not_Exists">Номер не существует</string>
    <string name="user_not_found">\ \ \ Пользователь не найден!\nЗарегистрируйтесь сначала</string>
    <string name="sample_current_price">Current price</string>
    <string name="sample_old_price">Old price</string>
    <string name="Sample_name_of_product">Name of the product \nIn two lines</string>
    <string name="sample_category_product">Category of the product</string>
    <string name="place_delivery_product">Place/delivery of product</string>
    <string name="sell_faster_string">Продать быстрее</string>
    <string name="sample_viewed_string">777</string>
    <string name="som_underline">%s c</string>
    <string name="dollar_price">%s $</string>
    <string name="search_text">У вас в городе</string>
    <string name="delivery_available">%s/Доставка</string>
    <string name="category_description">icons of categories</string>
    <string name="sample_title_of_the_product">Sample title of the product</string>
    <string name="sample_description_of_the_product">Line 1\nLine2\nLine3\nLine4\nLine5\nLine6\n</string>
    <string name="more_details">Все описание</string>
    <string name="less_details">Скрыть описание</string>
    <string name="sample_indicator">%s / %s</string>
    <string name="write">Написать</string>
    <string name="call">Позвонить</string>
    <string name="similar_ads">Похожие объявления</string>
    <string name="null_price">Цена договорная</string>
    <string name="som_price">%,d c</string>
    <string name="dollar_price_overview">$%s</string>
    <string name="choose_app">Выберите приложение</string>
    <string name="at_sign">\@</string>
    <string name="space" />
    <string name="telegram_hint">Введите логин телеграм в формате @имя</string>
</resources>