<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="176dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_8dp"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginRight="@dimen/margin_8dp"
    app:cardCornerRadius="@dimen/corner_radius_8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_ads"
            android:layout_width="176dp"
            android:layout_height="176dp"
            android:scaleType="centerInside"
            android:src="@drawable/img_sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:text="@string/empty_text"
            android:textAppearance="@style/buttonMagentaTextStyle"
            android:background="@drawable/magenta_ads_button"
            app:layout_constraintBottom_toBottomOf="@id/img_ads"
            app:layout_constraintEnd_toStartOf="@+id/img_ads"
            app:layout_constraintStart_toEndOf="@+id/img_ads" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_ads">

            <TextView
                android:id="@+id/price_product"
                style="@style/AdsPriceStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_current_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_ads" />

            <TextView
                android:id="@+id/old_price_product"
                style="@style/AdsSecondaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2dp"
                android:text="@string/sample_old_price" />

            <TextView
                android:id="@+id/name_product"
                style="@style/AdsProductStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2dp"
                android:text="@string/Sample_name_of_product" />

            <TextView
                android:id="@+id/name_category"
                style="@style/AdsSecondaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2dp"
                android:text="@string/sample_category_product" />

            <TextView
                android:id="@+id/place_product"
                style="@style/AdsSecondaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2dp"
                android:text="@string/place_delivery_product" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>