<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Container.Cells"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_48dp"
        android:background="@drawable/cell_around_corners"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_cells_icon"
            android:layout_width="@dimen/icon_width_31.23dp"
            android:layout_height="@dimen/icon_height_31.23dp"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/margin_horizontal_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_cells_image"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/tv_cell_title"
            style="@style/TextView.Cells.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_in_cells"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_cells_icon"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_cell_details"
            style="@style/TextView.Cells.Details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cells_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_shevron"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_shevron"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_18dp"
            android:src="@drawable/arrow_shevron"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/svevron" />

        <View
            android:id="@+id/v_divider"
            style="@style/Divider.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_cell_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>