<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="@dimen/view_176dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/corner_radius_8dp"
    app:cardElevation="@dimen/elevation_0dp"
    android:layout_margin="@dimen/margin_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_profile">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/img_ads"
            android:layout_width="@dimen/view_176dp"
            android:layout_height="@dimen/view_176dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/o_pay_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:src="@drawable/ic_wallet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_ads" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vip_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:src="@drawable/ic_vip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/MagentaButton"
            android:id="@+id/ads_btn"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_margin="@dimen/margin_8dp"
            android:text="@string/sell_faster_string"
            android:textAppearance="@style/buttonMagentaTextStyle"
            app:layout_constraintBottom_toBottomOf="@id/img_ads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/MagentaShapeAppearance" />

        <TextView
            android:id="@+id/view_count"
            style="@style/styleTextViewers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_viewed_string"
            app:drawableLeftCompat="@drawable/ic_viewed"
            app:layout_constraintEnd_toEndOf="@id/img_ads"
            app:layout_constraintTop_toTopOf="@id/img_ads" />

        <TextView
            android:id="@+id/price_product"
            style="@style/AdsPriceStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_current_price"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/img_ads"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/old_price_product"
            style="@style/AdsSecondaryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:text="@string/sample_old_price"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/price_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/name_product"
            style="@style/AdsProductStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:text="@string/Sample_name_of_product"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/old_price_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/name_category"
            style="@style/AdsSecondaryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:text="@string/sample_category_product"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/name_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/place_product"
            style="@style/AdsSecondaryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2dp"
            android:text="@string/place_delivery_product"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:paddingBottom="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/name_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>