<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Container.Cells"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cell_around_corners">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="@dimen/icon_width_48dp"
            android:layout_height="@dimen/icon_height_48dp"
            android:background="@drawable/bg_cells_image"
            android:layout_marginHorizontal="@dimen/margin_horizontal_8dp"
            android:layout_marginVertical="@dimen/margin_vertical_14dp"
            app:cardCornerRadius="@dimen/corner_radius_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_cells_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/ic_profile"
                android:focusable="true" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_cell_title"
            style="@style/TextView.Cells.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cv"
            app:layout_constraintTop_toTopOf="@id/cv"
            app:layout_constraintBottom_toBottomOf="@id/cv"
            tools:text="@string/title_in_cells" />

        <TextView
            android:id="@+id/tv_cell_subtitle"
            style="@style/TextView.Cells.SubTitle.Faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="@dimen/margin_start_8dp"
            app:layout_constraintStart_toEndOf="@id/cv"
            app:layout_constraintTop_toBottomOf="@id/tv_cell_title"
            tools:text="@string/cells_subtitle" />

        <ImageView
            android:id="@+id/iv_shevron"
            android:layout_width="@dimen/view_width_32dp"
            android:layout_height="@dimen/view_height_32dp"
            android:contentDescription="@string/shevron"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_shevron"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>